src/objects/MediCal_Story__c.object
<CustomObject>
    <description>Tell your Medi-Cal Story Interview Form</description>
    <fields>
        <fullName>Alt_City__c</fullName>
        <label>Alt City</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Email__c</fullName>
        <label>Alt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alt_Employer_Name__c</fullName>
        <description>Facility on form</description>
        <inlineHelpText>Facility on form</inlineHelpText>
        <label>Alt Employer Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_First_Name__c</fullName>
        <label>Alt First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Last_Name__c</fullName>
        <label>Alt Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Street__c</fullName>
        <label>Alt Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Zip_Code__c</fullName>
        <label>Alt Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Question_True__c</fullName>
        <description>See if any of the questions are answered True.</description>
        <formula>OR(Question_Unable_To_Get_Appt__c, Question_Turned_Away__c, Question_Wait_More_Than_Month__c, Question_Travel_Far__c, Question_Health_Suffered__c)</formula>
        <inlineHelpText>See if any of the questions are answered True.</inlineHelpText>
        <label>Any Question True</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attorney_Story_Lead_Notes__c</fullName>
        <label>Atty Lead Story Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_Connection__c</fullName>
        <label>Atty Assmnt Connection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>Needs Connection</fullName>
                </value>
                <value>
                    <fullName>No Connection Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_Content__c</fullName>
        <label>Atty Assmnt Content</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Likely Plaintiff</fullName>
                </value>
                <value>
                    <fullName>Possible Paintiff</fullName>
                </value>
                <value>
                    <fullName>Story Corps Plus</fullName>
                </value>
                <value>
                    <fullName>Story Corps</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_First_Meeting__c</fullName>
        <label>Atty Assmnt First Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_Med_Recs_Release__c</fullName>
        <label>Atty Assmnt Med Recs Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On File</fullName>
                </value>
                <value>
                    <fullName>Need Release</fullName>
                </value>
                <value>
                    <fullName>Do Not Need</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_Performance__c</fullName>
        <label>Atty Assmnt Performance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The attorney who is the primary contact for this Medi-Cal Story.</description>
        <label>Atty Assmnt Primary Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medi_Cal_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_Retainer__c</fullName>
        <label>Atty Assmnt Retainer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On File</fullName>
                </value>
                <value>
                    <fullName>Needs Retainer</fullName>
                </value>
                <value>
                    <fullName>Need Update</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Need</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Assmnt_Want_Contact_with_Doc__c</fullName>
        <label>Atty Assmnt Want Contact with Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>In Contact</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Intake_Date__c</fullName>
        <label>Atty Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Atty_Intake_Grade_Content__c</fullName>
        <label>Atty Intake Grade Content</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A Plus</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A Minus</fullName>
                </value>
                <value>
                    <fullName>B Plus</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B Minus</fullName>
                </value>
                <value>
                    <fullName>C Plus</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C Minus</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Intake_Grade_Performance__c</fullName>
        <label>Atty Intake Grade Performance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A Plus</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A Minus</fullName>
                </value>
                <value>
                    <fullName>B Plus</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>B Minus</fullName>
                </value>
                <value>
                    <fullName>C Plus</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C Minus</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Intake_In_Person_Meeting_Request__c</fullName>
        <label>Atty Intake In-Person Meeting Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Priority</fullName>
                </value>
                <value>
                    <fullName>Medium Priority</fullName>
                </value>
                <value>
                    <fullName>Low Priority</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Intake_Meeting_Req_Jan_2017__c</fullName>
        <description>Atty Intake Meeting Request Jan 2017</description>
        <label>Atty Intake Meeting Req Jan 2017</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Intake_Notes__c</fullName>
        <label>Atty Intake Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atty_Intake_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User record for the Attorney modifiyng the Medi-Cal Story.</description>
        <label>Atty Intake User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Medi_Cal_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Atty_Lead_Follow_Up_Appt_Date__c</fullName>
        <label>Atty Lead Follow-Up Appt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Atty_Lead_Follow_Up_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Atty Lead Follow-Up Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.In_Current_BU__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>SEIU</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medi-Cal Stories (Atty Lead Follow-Up Contact)</relationshipLabel>
        <relationshipName>Medi_Cal_Stories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Atty_Lead_Follow_Up_Date__c</fullName>
        <label>Atty Lead Follow-Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Atty_Lead_Follow_Up_Notes__c</fullName>
        <label>Atty Lead Follow-Up Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Atty_Lead_Follow_Up_Result__c</fullName>
        <label>Atty Lead Follow-Up Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Home</fullName>
                </value>
                <value>
                    <fullName>Bad Number</fullName>
                </value>
                <value>
                    <fullName>Refused</fullName>
                </value>
                <value>
                    <fullName>Not a Story</fullName>
                </value>
                <value>
                    <fullName>Scheduled to Talk</fullName>
                </value>
                <value>
                    <fullName>Appointment Set</fullName>
                </value>
                <value>
                    <fullName>House Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Lead_Follow_Up_Status__c</fullName>
        <label>Atty Lead Follow-Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Re-Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed Appointment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atty_Lead_Print_Date__c</fullName>
        <description>What date was the call sheet printed?</description>
        <label>Atty Lead Print Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Atty_Lead_Request_Date__c</fullName>
        <description>For recording when a call sheet was asked to be printed.</description>
        <label>Atty Lead Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Atty_Priority__c</fullName>
        <label>Atty Lead Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>Resubmit</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Community_Organizer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Organizer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medi-Cal Stories (Community Organizer)</relationshipLabel>
        <relationshipName>Medi_Cal_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_FID__c</fullName>
        <formula>Contact__r.FID__c</formula>
        <label>Contact FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Home_Phone__c</fullName>
        <formula>Contact__r.HomePhone</formula>
        <label>Contact Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <label>Contact Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Check if contact blank then use Alt Names otherwise use Contact Names</description>
        <formula>if ( or(isnull(Contact__c),isblank(Contact__c)), 
  Alt_Last_Name__c &amp; &quot;, &quot; &amp; Alt_First_Name__c,
  Contact__r.LastName &amp; &quot;, &quot; &amp; Contact__r.FirstName)</formula>
        <inlineHelpText>Check if contact blank then use Alt Names otherwise use Contact Names</inlineHelpText>
        <label>Interviewee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Interviewee Contact</description>
        <inlineHelpText>Interviewee Contact</inlineHelpText>
        <label>Interviewee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medi-Cal Stories (Contact)</relationshipLabel>
        <relationshipName>Medi_Cal_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coordinator_Accepted__c</fullName>
        <formula>if(text(Coordinator_Reviewed__c) = &quot;Yes - Accepted&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coordinator_Reviewed__c</fullName>
        <description>Check if reviewed and accepted by coordinator</description>
        <inlineHelpText>Check if reviewed and accepted by coordinator</inlineHelpText>
        <label>Coordinator Reviewed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reviewed</fullName>
                    <default>true</default>
                    <label>Not Reviewed</label>
                </value>
                <value>
                    <fullName>Yes - Accepted</fullName>
                </value>
                <value>
                    <fullName>Yes - Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Do Not Review</fullName>
                    <isActive>false</isActive>
                    <label>Do Not Review</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <description>Check if Interviewer blank default to Coordinator Names</description>
        <formula>if( OR(Interviewer__r.Account.Name  = &apos;SEIU-UHW&apos;, Interviewer__r.Account.Name  = &apos;GOOD HEALTH, GOOD JOBS FOR CALIFORNIA&apos;),
IF (Organizer__c=&apos;Chante Barnes-Warner&apos;,&apos;Chante Barnes-Warner&apos;,if(isblank(Owner:User.Acting_Manager__c),
     Owner:User.Manager.FirstName &amp; &apos; &apos; &amp; Owner:User.Manager.LastName,
     Owner:User.Acting_Manager__r.FirstName &amp; &apos; &apos; &amp; Owner:User.Acting_Manager__r.LastName)),
  if(AND(Interviewer__r.Account.Name&lt;&gt;&apos;SEIU-UHW&apos;,Division__c=&apos;HOSPITAL&apos;),Owner:User.Acting_Manager__r.FirstName &amp; &apos; &apos; &amp; Owner:User.Acting_Manager__r.LastName,
  IF ( Owner:User.LastName =&apos;Barnes-Warner&apos;,&apos;Chante Barnes-Warner&apos;,
	Interviewer__r.Account.Coordinator__r.FirstName &amp; &apos; &apos; &amp; Interviewer__r.Account.Coordinator__r.LastName)
)
)</formula>
        <inlineHelpText>Check if Interviewer blank default to Coordinator Names</inlineHelpText>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Me_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Yes! Count me in. I want to help fix Medi-Cal</description>
        <inlineHelpText>Yes! Count me in. I want to help fix Medi-Cal</inlineHelpText>
        <label>Count Me In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>Amador</fullName>
                </value>
                <value>
                    <fullName>Butte</fullName>
                </value>
                <value>
                    <fullName>Calaveras</fullName>
                </value>
                <value>
                    <fullName>Colusa</fullName>
                </value>
                <value>
                    <fullName>Contra Costa</fullName>
                </value>
                <value>
                    <fullName>Del Norte</fullName>
                </value>
                <value>
                    <fullName>El Dorado</fullName>
                </value>
                <value>
                    <fullName>Fresno</fullName>
                </value>
                <value>
                    <fullName>Glenn</fullName>
                </value>
                <value>
                    <fullName>Humboldt</fullName>
                </value>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Inyo</fullName>
                </value>
                <value>
                    <fullName>Kern</fullName>
                </value>
                <value>
                    <fullName>Kings</fullName>
                </value>
                <value>
                    <fullName>Lake</fullName>
                </value>
                <value>
                    <fullName>Lassen</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madera</fullName>
                </value>
                <value>
                    <fullName>Marin</fullName>
                </value>
                <value>
                    <fullName>Mariposa</fullName>
                </value>
                <value>
                    <fullName>Mendocino</fullName>
                </value>
                <value>
                    <fullName>Merced</fullName>
                </value>
                <value>
                    <fullName>Modoc</fullName>
                </value>
                <value>
                    <fullName>Mono</fullName>
                </value>
                <value>
                    <fullName>Monterey</fullName>
                </value>
                <value>
                    <fullName>Napa</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division_Goal__c</fullName>
        <description>use for report;</description>
        <formula>CASE( Division__c, &quot;KAISER&quot;, 609, &quot;HOSPITAL&quot;, 379,&quot;COMMUNITY&quot;,630,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>IF
(TEXT(Interviewer__r.Division_Type__c)=&quot;Staff&quot;,
 CASE(UPPER(Interviewer__r.Department), &quot;COMMUNITY OUTREACH&quot;, &quot;COMMUNITY&quot;, 
    &quot;KAISER&quot;, UPPER(Interviewer__r.Department),
	&quot;HOSPITAL&quot;,UPPER(Interviewer__r.Department), &quot;OTHER&quot;),  
if (CONTAINS(Interviewer__r.Account.Name, &quot;KAISER&quot;), &quot;KAISER&quot;,
UPPER(TEXT(Interviewer__r.Division_Type__c)
)
)
)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is use for organizer without stories;use for report;</description>
        <label>Dummy Story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <formula>Interviewer__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewer Facility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Current__c</fullName>
        <description>needed for report;</description>
        <label>Goal-Current</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Pevious__c</fullName>
        <description>needed for report;</description>
        <label>Goal-Pevious</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Map__c</fullName>
        <formula>IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; +  Alt_Street__c + &quot;,&quot; +  Alt_City__c + &quot;,CA,&quot; +  Alt_Zip_Code__c + &quot;&amp;zoom=13&amp;size=450x450&amp;markers=color:purple|&quot; + Alt_Street__c + &quot;,&quot; + Alt_City__c  + &quot;,&quot; + Alt_City__c + &quot;,CA,&quot; +  Alt_Zip_Code__c + &quot;&amp;sensor=false&quot;
, &quot;No map available&quot;, 450, 450)</formula>
        <label>Google Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_Kidney_Disease__c</fullName>
        <description>use for report;</description>
        <formula>IF(CONTAINS(TEXT(Kidney_Disease__c),&quot;Yes&quot;), TRUE, FALSE)</formula>
        <label>Dialysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Phone is for home?</description>
        <inlineHelpText>Phone is for home?</inlineHelpText>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hospital_Goal__c</fullName>
        <formula>IF( AND( Division__c =&quot;HOSPITAL&quot;, New_Goal__c &gt; 0), New_Goal__c , 21)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hospital Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hospital_Team__c</fullName>
        <description>This is auto updates by workflow.</description>
        <label>Hospital Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>South - John&apos;s Team</fullName>
                </value>
                <value>
                    <fullName>South - Mali&apos;s Team</fullName>
                </value>
                <value>
                    <fullName>North - Salvador&apos;s Team</fullName>
                </value>
                <value>
                    <fullName>North - Jackie&apos;s Team</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interviewee_City__c</fullName>
        <formula>if (isblank(Alt_City__c) ,
    if(isblank( Contact__r.MailingCity ),
       if (isblank( Contact__r.Account.ShippingCity),  Contact__r.Account.BillingCity, Contact__r.Account.ShippingCity),
    Contact__r.MailingCity),
Alt_City__c)</formula>
        <label>Interviewee City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewee_Division__c</fullName>
        <formula>IF( IsMember__c=TRUE,  Text(Contact__r.Division_Type__c), &quot;None&quot;)</formula>
        <label>Interviewee Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewee_Facility__c</fullName>
        <formula>IF( IsMember__c=TRUE,   Contact__r.Account.Name ,  Alt_Employer_Name__c )</formula>
        <label>Interviewee Facility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewee_Type__c</fullName>
        <formula>IF( IsMember__c=TRUE, &quot;Member&quot;, &quot;Non-Member&quot;)</formula>
        <label>Interviewee Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer_FID__c</fullName>
        <formula>Interviewer__r.FID__c</formula>
        <label>Interviewer FID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer_Name__c</fullName>
        <formula>Interviewer__r.Contact_Name__c</formula>
        <label>Interviewer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contact information for interviewer</description>
        <label>Interviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Medi-Cal Stories</relationshipLabel>
        <relationshipName>MediCAL_Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsMember__c</fullName>
        <formula>IF(OR(TEXT(Contact__r.Division_Type__c)=&apos;Kaiser&apos;,TEXT(Contact__r.Division_Type__c)=&apos;Hospital&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kidney_Disease__c</fullName>
        <description>Do you have kidney disease and/or need dialysis?</description>
        <inlineHelpText>Do you have kidney disease and/or need dialysis?</inlineHelpText>
        <label>Kidney Disease</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - Family</fullName>
                    <isActive>false</isActive>
                    <label>Yes - Family</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Other__c</fullName>
        <label>Language Other</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <description>Languages Spoken</description>
        <inlineHelpText>Languages Spoken</inlineHelpText>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leader_Role__c</fullName>
        <label>Leader Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Community Team Leader</fullName>
                </value>
                <value>
                    <fullName>Community Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC_Last_5_Ys__c</fullName>
        <description>use for report;</description>
        <formula>MediCal_Last_5_Years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MC Last 5 Ys.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MediCal_Last_5_Years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have you or a family member had Medi-Cal in the last 5 years?</description>
        <inlineHelpText>Have you or a family member had Medi-Cal in the last 5 years?</inlineHelpText>
        <label>Medi-Cal Last 5 Years</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>